# param-gauss-recon

./: .gitignore  CMakeLists.txt  README.md  auto_run.py  compile.bat  compile.sh  compile_pgr.bat  compile_pgr.sh  compile_simple.bat  compile_simple.sh  compile_zlib.bat  compile_zlib.sh  convert_folder.py  convert_mash.py  convert_noise_mash.py  convert_noise_pgr.py  convert_pgr.py  dev_setup.sh  pack.bat  pack.sh  run.sh  run_pgr.py  setup.bat  setup.sh  simple_run.py  single_file.py  test_run.bat  test_run.sh  unpack.bat  unpack.sh
3rd/: CMakeLists.txt
3rd/PGR/: PGRExportQuery.cpp
3rd/PGR/src/: Geometry.cpp  Octree.cpp
apps/: PGRExportQuery  PGRLoadQuery
include/: constant.h  io.h  kernel.h  pcd.h  pcd_sampler.h  pgr_io.h  pgr_params.h  pgr_reconstructor.h  pgr_solver.h  pointcloud.hpp  query.h  reconstructor.h  solver.h
param_gauss_recon/Config/: constant.py  device.py  path.py
param_gauss_recon/Cpp/: PGRExportQuery.cpp  PGRLoadQuery.cpp
param_gauss_recon/Cpp/src/: Octnode.cpp
param_gauss_recon/Data/: pgr_params.py
param_gauss_recon/Demo/: reconstructor.py
param_gauss_recon/Method/: io.py  kernel.py  pcd.py  query.py  utils.py
param_gauss_recon/Module/: PGRSolve.py  pcd_sampler.py  reconstructor.py  solver.py
simple_cpp/: CMakeLists.txt  common.hpp  io.hpp  main.cpp  pgr.hpp
src/: io.cpp  kernel.cpp  main.cpp  pcd.cpp  pcd_sampler.cpp  pgr_io.cpp  pgr_params.cpp  pgr_pcd.cpp  pgr_reconstructor.cpp  pgr_solver.cpp  query.cpp  reconstructor.cpp  solver.cpp
